src/snapshots/templating_engine__parse__test__separator_in_special-2.snap
---
source: src/lib.rs
expression: "parse_template(b\"{% {{ %}\")"
---
Ok(
    (
        NumberedInput {
            line_number: 0,
            i: [],
        },
        [
            NumberedBlock {
                line_number: 0,
                block: Special(
                    TagPercent(
                        Ok(
                            "{{",
                        ),
                    ),
                ),
            },
        ],
    ),
)
