src/snapshots/templating_engine__parse__test__simple.snap
---
source: src/lib.rs
expression: "parse_template(b\"{{ hello }}\")"
---
Ok(
    (
        [],
        [
            Special(
                TagCurly(
                    Ok(
                        "hello",
                    ),
                ),
            ),
        ],
    ),
)
